Проверить модули